添加 fasterxml-jackson 笔记

--- a/Java/J2EE/Spring/SpringBoot笔记/笔记.md
+++ b/Java/J2EE/Spring/SpringBoot笔记/笔记.md
@@ -153,20 +153,226 @@ spring.profiles.active=dev,hsqldb
 
 看到25.
 
-# 23 #
-banner中有一些变量是可以插值的
+# 8.介绍 #
+创建独立的 产品级别的 基于Spring的应用
+最终可以形成单个jar包, 包含了所有的依赖, 你可以 java -jar 运行!
 
-SpringApplicationBuilder
-1. 一些时间的监听
-2. 
+# 9.系统需求 #
+1. 尽量选择 java8
+2. 支持的容器有tomcat jetty undertow
+
+# 10.安装 #
+通过maven, 继承parent模块
+如果遇到特殊情况, 你不能继承parent模块, 比如你已经有了parent模块了, 那么可以:
+http://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#using-boot-maven-without-a-parent
+
+## Spring Boot 命令行 ##
+TODO
+
+# 11.开发第一个应用 #
+1. 声明 spring-boot-starter-parent 为parent
+2. 添加依赖, 比如 spring-boot-starter-web
+3. (可选) 通过 mvn dependency:tree 查看依赖层次
+4. 写代码, 主要是 @EnableAutoConfiguration SpringApplication SpringApplicationBuilder @SpringBootApplication 等关键类
+5. mvn spring-boot:run
+6. 做成一个可执行的jar, 添加 spring-boot-maven-plugin 插件
+	1. 执行 mvn package
+	2. java -jar 执行...
+@EnableAutoConfiguration
+
+# 13.构建系统 #
+spring-boot-starter-parent
+如果想要覆盖某个版本, 那么:
+<spring-data-releasetrain.version>Fowler-SR2</spring-data-releasetrain.version> 提供一个新的属性
+至于属性叫什么名字, 可以到  spring-boot-dependencies pom 里去找
+
+有的时候并不能使用 parent, 那么可以将所有依赖都导入:
+但是这个方式的话, 要修改某个特定依赖的版本号就有一点点麻烦了, 看教程
+
+修改java版本
+<java.version>1.8</java.version>
+
+使用 spring-boot-maven-plugin 插件
+
+## Starter POMs ##
+它们是多个依赖的一个聚合, 让你一次性导入所有相关的依赖, 比如:
+spring-boot-starter-data-jpa 就可以让你导入所有和data-jpa相关的依赖
+这样可以保证版本一致性
+
+官方列出了一些常见的starter
+当然也可以到 spring-boot-starters  pom 里去找, 这里聚合了所有的 官方的 starter
+
+
+创建自己的starter
+http://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#boot-features-custom-starter
+
+# 14.结构化你的代码 #
+1. 将你的Main类放在你的包的根下, 通常它会有 @EnableAutoConfiguration, 同时它也隐式定义了包扫描和自动配置等
+
+# 15.配置类 #
+推荐使用基于Java的配置类, @Configuration
+
+# 16.自动配置 #
+@EnableAutoConfiguration 允许根据你加的jar包来判断你需要什么功能, 从而使得某个 Configuration 类生效(这样就会将配置引入到你的上下文了)
+将日志设置为debug级别, 就会打印出自动配置的相关信息, 这样你就知道都自动启动了哪些指导工配置, 方便你对他们进行替换
+如果你发现你并不需要某些自动配置, 那么可以:
+@EnableAutoConfiguration(exclude={DataSourceAutoConfiguration.class})
+将 DataSourceAutoConfiguration 这个配置类排除掉
+
+# 17.Spring Beans 和 依赖注入#
+@ComponentScan @Autowired
+将你的配置类放到你的包的根下, 这样就可以减少很多配置
+
+# 18.使用@SpringBootApplication #
+@SpringBootApplication = @Configuration + @EnableAutoConfiguration + @ComponentScan
+
+# 19.运行程序 #
+大部分的IDE都支持直接运行
+或使用maven, mvn spring-boot:run
+
+# 20. Developers tools #
+添加下面的依赖
+```
+<dependencies>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-devtools</artifactId>
+        <optional>true</optional>
+    </dependency>
+</dependencies>
+```
+
+1. optional 使得在最终打包的时候 该依赖被忽略
+2. 一旦这个依赖在, 开发阶段你就会自动获得很多 合适开发阶段的配置
+	1. 比如模板引擎不再进行缓存, 这样你对页面的修改就能马上体现
+3. 支持热重启
+	1. 有2个类加载器, 一个用于加载基本不变的代码(比如依赖的jar), 一个用于加载你的代码
+	2. 当热重启的时候, 就销毁后者, 重建一个类加载器
+
+在IDEA中, 使用 make build 会导致一次热重启
+可以用下面的属性排除一些目录, 免得每次都重新加载
+```
+spring.devtools.restart.exclude=static/**,public/**
+```
+使用下面的版本的话可以达到一样的效果, 但是它不会清除掉默认的排除目录
+```
+spring.devtools.restart.additional-exclude
+```
+使用下面的路径增加监控路径
+```
+spring.devtools.restart.additional-paths
+```
+
+使用 spring.devtools.restart.enabled=false 可以禁用热重启
+
+## LiveReload ##
+spring-boot-devtools 内包含了一个内嵌的 LiveReload 服务器, 可以用于触发浏览器的刷新, 当资源改变的时候.
+似乎需要浏览器端的插件支持, 见 livereload.com, 到该网上安装插件
+然后就可以用了!
+
+pring.devtools.livereload.enabled=false 禁用该功能
+
+# 21.打包发布 #
+可执行的jar是自包含的, 可以用于产品级别的部署
+
+# 23 #
+使用 SpringApplication.run(AppConfig.class, args) 可以直接运行简单的程序
+如果需要更多配置的话, 就使用 SpringApplicationBuilder
+
+在资源目录里放 banner.txt 可以定制启动时显示的banner
+在该文件里可以进行插值
+
+spring.main.banner-mode=off 则关闭banner功能
+
+一个 SpringApplication 会做如下动作:
+1. 创建一个合适的ApplicationContext
+2. 注册一个 CommandLinePropertySource
+3. 刷新上下文, 加载所有单例 bean
+4. 触发任何 CommandLineRunner beans
+
+各种事件监听器
+通过 setWebEnvironment 明确设置是否 web 环境
+
+通过注入 ApplicationArguments 可以访问程序启动时的参数
+传入参数的时候要形如:
+--author=xzchaoo 或 --debug
+具体见代码或文档
+
+CommandLineRunner
+一旦程序启动之后就会执行
 
 # 24. 外部配置 #
+## 如何提供配置信息 ##
+Spring 的 Enviroment 接口, 用于整合所有的配置信息
+
+1. application.properties
+2. application-{profile}.properties
+3. @PropertySources @PropertySource
+4. 环境变量
+5. JVM属性 -Dauthor=xzchaoo 之类
+6. args启动参数, --debug=true
+当然方式不仅这些, 其中args启动参数优先级最高, 其他的你可以想想
+同样支持yaml文件
+属性本身还允许再插值, 比如 my.number=${random.int}
+
+## 如何获取配置信息 ##
+1. @Value("${name}")
+2. @ConfigurationProperties 用于将属性绑定到一个对象
+3. 注入 Environment 对象, 自己手动获取
+4. 通过属性注入一个json对象, 但是这个json对象很难写, 因为是在命令行里
 文档这里列出了一堆支持的配置信息的来源
 
-同样支持yaml文件
-application-{profile}.properties
-application.properties
-@PropertySource annotations on your @Configuration classes.
+## 指定配置文件 ##
+spring.config.name 用于指定配置的文件 默认是 application.properties
+spring.config.location 用于指定该配置文件在哪个目录下
+$ java -jar myproject.jar --spring.config.location=classpath:/default.properties,classpath:/override.properties
+可以通过命令行指定这个两个参数, 这两个参数在比较早的时刻就会生效!
+
+通过 spring.config.name 或 spring.config.location 参数手动指定 java -jar myproject.jar --spring.config.name=myproject
+如果你设置了location, 那么它的优先级是最高的
+
+文档里还介绍了好几个默认会搜索的目录
+下面的优先级是递增的
+classpath:application.properties
+classpath:config/application.properties
+file:application.properties
+file:config/application.properties
+
+## 关于profile ##
+对于 profile 相关的配置:
+形如 application-dev.properties 就会生效, 它遵循的搜索策略和上面一样
+通过 spring.profiles.active 指定激活的 profiles
+
+properties里是允许有插值的, 但是只允许引用已有的值, 比如定义在前的变量或系统变量
+
+## 推荐使用 @ConfigurationProperties ##
+需要启动 @EnableConfigurationProperties(默认已启动)
+```
+@Component //这个不能少
+@ConfigurationProperties(prefix="connection")
+public class ConnectionSettings {
+    private String username;
+    private InetAddress remoteAddress;
+    //get set方法
+}
+```
+
+@ConfigurationProperties 还可以用于修饰一个 @Bean 的返回值
+它会将对应的属性注入到该Bean上
+
+a.firstName
+a.first-name
+a.first_name
+都可以成功绑定到firstName属性
+
+对于使用 @ConfigurationProperties 的属性绑定
+Spring会使用 ConversionService 进行类型转换, 因此他支持更强大的类型转换!
+用@Value的话没有办法做到注入数组
+但用 @ConfigurationProperties 就可以!
+它还可以配合 javax.validation 使用
+
+spring-boot-actuator模块, 在 /configprops 端点可以看到配置信息
+
 
 ```
 @Value("${name}")
@@ -264,16 +470,99 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 
 
-# 27. WEB #
+# 27. WEB MVC #
 1. 依赖 spring-boot-starter-web 模块
 2. 直接就可以开始写你的controller了
+3. 其实它帮你自动配置了一堆东西
+	1. ContentNegotiatingViewResolver BeanNameViewResolver
+	2. WebJars 支持
+	3. Converter GenericConverter Formatter
+	4. HttpMessageConverters
+	5. MessageCodesResolver
+	6. index.html
+	7. Favicon
+	8.  ConfigurableWebBindingInitializer
+	9.  静态目录
+		1.   /static/** -> resources/static 等目录
+		2.   访问 /1.txt 变成访问 resources/static目录下的1.txt
+		3.   使用 spring.resources.staticLocations 修改静态资源位置
 
-然后它自己启动了一堆东西
-27.1.1 Spring MVC auto-configuration
+可以自己在写一个类, 带有@Configuration  @EnableWebMvc, 这样就可以完全配置你的mvc了, 此时Boot将不会做任何事
+可以创建一个 @Bean WebMvcConfigurerAdapter 但没有 @EnableWebMvc 这样就可以保留Boot的功能
 
-可以自己在写一个类, 带有@Configuration  @EnableWebMvc, 这样就可以完全配置你的mvc了
 
-不习惯这样的开发方式怎么办!
+@NestedConfigurationProperty
+
+
+模板文件放在 src/main/resources/templates
+
+错误处理
+boot默认将 所有错误映射到 /error
+配置一个bean, ErrorAttributes
+或实现 ErrorController 接口, 完全替换掉这一行为
+BasicErrorController 是它的一个实现类
+
+Integer statusCode = (Integer) request.getAttribute("javax.servlet.error.status_code");
+
+配置错误代码映射
+```
+@Bean
+public EmbeddedServletContainerCustomizer containerCustomizer(){
+    return new MyCustomizer();
+}
+
+// ...
+
+private static class MyCustomizer implements EmbeddedServletContainerCustomizer {
+
+    @Override
+    public void customize(ConfigurableEmbeddedServletContainer container) {
+    这个步骤相当于是在 web.xml 里的错误代码配置!
+        container.addErrorPages(new ErrorPage(HttpStatus.BAD_REQUEST, "/400"));
+    }
+
+}
+```
+
+提供 @Bean WebMvcConfigurer 进行配置 
+
+
+内嵌容器配置
+Servlet Filter Listener 之类
+如果这些类的对象已经是Spring的bean了, 那么就会被自动注册到容器上
+
+可以通过下面3个类进行更多配置
+ServletRegistrationBean
+FilterRegistrationBean 
+ServletListenerRegistrationBean 
+
+@ServletComponentScan 配合 @WebServlet, @WebFilter, and @WebListener 使用
+
+EmbeddedWebApplicationContext 会搜索 EmbeddedServletContainerFactory 的bean
+常见的实现有
+TomcatEmbeddedServletContainerFactory, JettyEmbeddedServletContainerFactory, or UndertowEmbeddedServletContainerFactory
+
+server.port 设置端口
+server.address 绑定的地址
+server.session.store-dir
+session.timeout
+server.session.cookie.*
+server.error.path
+
+遇到容器特定的配置, 需要像下面这样:
+server.tomcat.xxx=yyy
+
+也可以通过编程的方式来定制:
+Bean 实现 EmbeddedServletContainerCustomizer接口
+就可以拿到 ConfigurableEmbeddedServletContainer  的实例, 然后进行各种设置
+
+当然你也可以直接配置一个你的 ConfigurableEmbeddedServletContainer Bean
+
+内嵌的jsp支持似乎有点问题
+
+
+
+
 
 
 # 29 数据库 #
@@ -355,4 +644,144 @@ application-${profile}.properties
 ```
 第一个 classpath:xzc.properties 提供了默认配置
 第二个 file:app.properties 提供了用户覆盖配置的机会, 只要在它的当前运行目录下有 app.properties 就可以进行覆盖
+
+# 41.配置你自己的自动配置 #
+@Configuration
+@Conditional 和 @ConditionalXXX 类用于判断条件是否成立
+@ConditionalOnMissingBean(search = SearchStrategy.CURRENT)
+PropertySourcesPlaceholderConfigurer
+
+ConditionalOnClass 只有当某个类在classpath里的时候才有效
+
+@ConditionalOnMissingBean(name = "websocketContainerCustomizer")
+@ConditionalOnJava(JavaVersion.SEVEN)
+
+@ConditionalOnWebApplication
+@AutoConfigureAfter(EmbeddedServletContainerAutoConfiguration.class)
+
+@Conditional(DefaultDispatcherServletCondition.class)
+@ConditionalOnProperty(value = "spring.mvc.favicon.enabled", matchIfMissing = true)
+
+
+ META-INF/spring.factories
+
+
+# 48.使用远程shell监控和管理 #
+基于 CRaSH reference documentation.
+```
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-remote-shell</artifactId>
+ </dependency>
+```
+user : bdbaa3a5-7948-4596-aed3-d4e7f049f0f5
+
+利用ssh可以连上去, 端口在2000
+然后就可以进行各种配置了
+
+shell.auth.simple.user.name 设置用户名
+shell.auth.simple.user.password 设置密码
+
+# 49.各项指标 #
+http://localhost:8080/metrics
+
+通过将 CounterService 注入, 可以 加减 各项指标, 可以使用自己定义的指标名
+
+添加一个 Bean 实现了 PublicMetrics 接口
+这样每次访问 /metrics 的时候就会显示它了
+
+默认情况下所有实现了 PublicMetrics 的Bean的统计信息都会显示
+可以通过 MetricsEndpoint 修改这个配置
+
+提供自己的 MetricWriter 和 MetricReader (见文档), 就可以导入和导入指标到一个具体的位置, 比如redis, 或一个内存的位置
+
+@Value("${spring.application.name:application}.${random.value:0000}")
+
+# 63.maven插件 #
+```
+<groupId>org.springframework.boot</groupId>
+<artifactId>spring-boot-maven-plugin</artifactId>
+<version>1.3.5.RELEASE</version>
+```
+
+mvn package -> 打成jar包
+通过 Main-Class 指定你的Main类, 当然Spring也可以自动搜索出
+
+如果想让一个程序既可以独立执行, 也可以部署到容器上, 那么需要将相关依赖声明为 provided
+```
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-tomcat</artifactId>
+    <scope>provided</scope>
+</dependency>
+```
+
+
+# 68.启动程序 #
+*AutoConfiguration
+@Conditional*
+
+@ConfigurationProperties
+
+RelaxedPropertyResolver 
+@ConditionalOnExpression
+
+当日志级别为debug的时候, ConditionEvaluationReport  就会打印出自动配置的信息
+也可以使用 /autoconfig 端点来查看
+
+# 69.属性和配置 #
+通过 spring.config.name spring.config.location 可以修改默认配置文件的位置
+@PropertySources 可以导入额外的配置文件, 但优先级比较低
+
+使用技巧: server.port=${port:8080} 可以提供一个短名称和默认值
+
+设置profiles
+spring.profiles.active=production
+
+# 70.内嵌的容器 #
+1. 添加 Servlet Filter Listener:
+	1.  用@Component修饰他们, 这样就会被自动注册, 被管理
+	2.  用@WebServlet之类的修饰他们, 会被自动注册, 但不被管理, @ServletComponentScan
+	3.  上面两种方法似乎无法配置 urlPattern, dispatcherType 之类的参数
+		1.  使用 FilterRegistrationBean  之类的 Bean
+2. ServerProperties 里提供了常见的简单的配置, 比如修改端口号, session超时时间等
+3. 介绍了自动随机选择端口(在测试的很有用), 和将端口导出的方法
+4. 配置SSL
+5. 在一个前端代理服务器后做302重定向时可能出的问题
+6. tomcat 代理配置
+7. tomcat配置
+	1. 通过 server.xx 属性, 见ServerProperties
+	2. 通过 EmbeddedServletContainerCustomizer
+	3. 通过 TomcatEmbeddedServletContainerFactory  
+8. WebSocket支持 ServerEndpointExporter @ServerEndpoint 
+9. 响应压缩
+	1. server.compression.enabled=true
+	2. server.compression.min-response-size=2048
+	3. server.compression.mime-types
+
+# 71.MVC #
+1. 只要jackson2在, 默认返回json内容
+2. 对 ObjectMapper 进行配置
+3. If you want to replace the default ObjectMapper completely, define a @Bean of that type and mark it as @Primary.
+4. 各种配置 以及 由自己完全控制MVC WebMvcAutoConfiguration
+5. 处理文件上传 MultipartAutoConfiguration
+6. 各种模板引擎
+
+# 72.Logging #
+1. 修改成使用 log4j2
+
+
+# 73.数据访问 #
+1. 配置自己的 DataSource 就可以替换掉内嵌的DS
+DataSourceBuilder
+@EntityScan
+JpaBaseConfiguration
+HibernateJpaAutoConfiguration
+JpaProperties
+spring.data.*.repositories.enabled 可以用于jpa或mongodb支持
+
+ 
+ 
+# Annotation积累 #
+## ConfigurationProperties ##
 
