--- a/Java/Lib/HikariCP/笔记.md
+++ b/Java/Lib/HikariCP/笔记.md
@@ -3,7 +3,20 @@ https://github.com/brettwooldridge/HikariCP
 高性能的JDBC连接池
 
 # 配置 #
-
+HikariDataSource ds = new HikariDataSource();
+ds.setDataSourceClassName("com.mysql.jdbc.jdbc2.optional.MysqlDataSource");
+ds.addDataSourceProperty("user", "root");
+ds.addDataSourceProperty("password", "70862045");
+ds.addDataSourceProperty("databaseName", "a1");
+ds.addDataSourceProperty("portNumber", 3306);
+ds.addDataSourceProperty("serverName", "localhost");
+ds.addDataSourceProperty("cachePrepStmts", true);
+ds.addDataSourceProperty("prepStmtCacheSize", 250);
+ds.addDataSourceProperty("prepStmtCacheSqlLimit", 2048);
+ds.setMinimumIdle(2);
+ds.setMaximumPoolSize(2);
+return ds;
+		
 ## 必填 ##
 ``dataSourceClassName``
 如果使用了jdbcUrl 那么就不用设置这个属性
