--- a/Java/Lib/Joda-Time/学习笔记.md
+++ b/Java/Lib/Joda-Time/学习笔记.md
@@ -100,12 +100,16 @@ Partial
 
 PeriodType
 用于表示一个Period的类型
-看它的源代码, 感觉它是用一个数组来表示这个Period可以表示什么类型的字段来达到这个效果的.
+看它的源代码, 感觉Period是用一个数组来表示这个Period可以表示什么类型的字段来达到这个效果的.
+比如一个Period指定了 PeriodType.YEAR MONTH
+那么Period只能用年和月来表示, 比如3年5个月, 相当于是取整了!?
+如果指定了 YEAR SECOND 那么只能由年和秒来描述, 比如
+3年1000秒 就没有 分 时 天 月 了
 
 DurationFieldType
 
-
-
+形如 Days 的类提供了一些静态方法来做计算, 比如两个日期之间的天数差
+并且这些字段都可以进行一些加减法
 
 DateTimeFormatter fmt = ISODateTimeFormat.dateTime();
 DateTimeFormatter fmt = DateTimeFormat.forPattern("yyyyMMdd");
@@ -141,11 +145,43 @@ Date与Instant可以互相转换
 
 # 转换 #
 
-Date -> Datetime
+Date / 毫秒数 -> DateTime
 直接通过构造函数 或 转成毫秒
 
+DateTime -> Date
+调用 toDate 方法
+
+LocalDateTime -> DateTime
 
 # 例子 #
 本月第一天0点:
+System.out.println(DateTime.now().monthOfYear().roundFloorCopy());
+或
 System.out.println(DateTime.now().dayOfMonth().withMinimumValue().dayOfMonth().roundFloorCopy());
 
+获得两个日期的间隔天数
+```
+Days d = Days.daysBetween(startDate, endDate);
+int days = d.getDays();
+```
+或
+```
+Period p = new Period(startDate, endDate, PeriodType.yearMonthDay());
+```
+第三个参数是必要的, 否则它可能会理解成 3年5个月4天 这样的理解
+
+
+# 格式化 #
+DateTimeFormatter
+ISODateTimeFormat
+DateTimeFormat.forPattern("yyyyMMdd");
+```
+DateTimeFormatter fmt = new DateTimeFormatterBuilder()
+.appendDayOfMonth(2)
+.appendLiteral('-')
+.appendMonthOfYearShortText()
+.appendLiteral('-')
+.appendTwoDigitYear(1956)  // pivot = 1956
+.toFormatter();
+```
+ String b = dt.toString("dd:MM:yy");
