继续增加 joda-time 笔记 和 使用例子

--- a/Java/Lib/Joda-Time/学习笔记.md
+++ b/Java/Lib/Joda-Time/学习笔记.md
@@ -72,6 +72,7 @@ MutableDateTime
 	可以修改的DT
 Interval
 	表示两个Instant之间的间隔, 总是[beg,end)的
+	这两个 Instant 会被保存下来
 	可以转成Duration
 	Interval interval = new Interval(start, end);
 	Duration dur = new Duration(start, end);
@@ -81,6 +82,9 @@ Interval
 	与Interval/Instant的比较:before/after
 	转成Duration, Period
 	parse
+	与交集 返回两个Interval的间隔, 就是我的最大和它的最小的差距 或我的最小和它的最大的差距
+	判断两个Interval是否可以连续
+	
 Duration
 	基于毫秒, 通常是从一个 interval 获得的
 	instant + duration = instant
@@ -170,6 +174,11 @@ Period p = new Period(startDate, endDate, PeriodType.yearMonthDay());
 ```
 第三个参数是必要的, 否则它可能会理解成 3年5个月4天 这样的理解
 
+两个日期之间的周数, 年数
+System.out.println(Weeks.weeksBetween(new LocalDate(1994, 5, 21), LocalDate.now()).getWeeks());
+System.out.println(Years.yearsBetween(new LocalDate(1994, 5, 21), LocalDate.now()).getYears());
+		
+
 
 # 格式化 #
 DateTimeFormatter
@@ -185,3 +194,6 @@ DateTimeFormatter fmt = new DateTimeFormatterBuilder()
 .toFormatter();
 ```
  String b = dt.toString("dd:MM:yy");
+ 
+ # 互相转换 #
+ 
