--- a/Java/J2EE/Spring/SpringBoot笔记/笔记.md
+++ b/Java/J2EE/Spring/SpringBoot笔记/笔记.md
@@ -665,6 +665,14 @@ ConditionalOnClass 只有当某个类在classpath里的时候才有效
 
  META-INF/spring.factories
 
+# 44.启动产品级特性 #
+spring-boot-starter-actuator
+可以用于控制和管理你的模块
+
+# 45.Endpoints #
+Endpoint 相当于对应了一个 url地址, 通过访问这个url地址, 就会知道当前系统的运行情况, 配置等
+
+
 
 # 48.使用远程shell监控和管理 #
 基于 CRaSH reference documentation.
