--- a/Java/Lib/Quartz/学习笔记.md
+++ b/Java/Lib/Quartz/学习笔记.md
@@ -75,6 +75,8 @@ schedule.rescheduleJob( triggerkey, trigger )
 SimpleScheduleBuilder.simpleSchedule()
 
 它有一些 misfire 的处理策略
+withMisfireHandlingInstructionNowWithExistingCount
+
 
 使用SimpleScheduleBuilder建立一个Shcedule
 	每x秒 或 每y分钟 或 每z小时
