--- a/Java/Lib/Ormlite/学习笔记.md
+++ b/Java/Lib/Ormlite/学习笔记.md
@@ -1,6 +1,17 @@
 # ORMLite #
 http://ormlite.com/
 
+很简单的JDBC包装
 
+1. 使用annotation修饰你的实体类
+@DatabaseTable
+@DatabaseField
 
-## 进行批处理 ##
+2. 创建一个 ConnectionSource 的实例
+
+3. 使用 TableUtils 保证表的存在
+
+4. 使用 DaoManager 创建 Dao 实例
+	1. 可以使用 RuntimeExceptionDao 包装一层
+
+其他的没必要多想, 能用起来就行了.
