--- a/Java/java8/笔记.md
+++ b/Java/java8/笔记.md
@@ -33,3 +33,149 @@ collect 用于将流转成具体的集合类型, 比如List, Set, Map
 生成 Map<Boolean, List<Value>> 的结果
 
 
+
+并发增强
+
+
+# AtomicXXX #
+1.5引入的
+但是功能有限, 比如:
+
+count.set(Math.max(count.get(),VALUE)); 这个动作不是原子的:
+你需要这样做:
+
+
+```
+while(true){
+	int oldValue = count.get();
+	int newValue = Math.max(oldValue, VALUE);
+	if(count.compareAndSet(oldValue,newValue)){
+		break;	
+	}
+}
+```
+这看起来有点麻烦 和 效率低, 但实际上比用锁更高校
+
+
+在Java8中可以这样:
+
+count.updateAndGet(x->Math.max(x,VALUE));
+你可以看看源代码, 他的实现跟上面其实是一样的
+
+
+
+# LongAccumulator 之类的类 #
+当大量并发的时候, Atomic 的效率还是不够高, 因为只能有一个操作是成功的, 其他的操作不得不继续循环
+
+## LongAdder ##
+多个变量的累加值为最终结果
+
+
+LongAccumulator
+
+
+
+ConcurrentHashMap 可以作为 Set 使用
+
+Arrays
+
+
+cpmuteIfAbsent 好东西
+
+## merge ##
+merge(key,value,合并器)
+当key不存在时, 设置key=value
+当key存在时, 设置key=合并器(oldValue,value)
+
+map.merge(word, 1L, Long::sum)
+
+
+
+CHM 支持在各种遍历的时候进行各种修改操作
+它没有使用快照技术, 因此你遍历的结果只能认为是一个近似值
+
+searchXXX操作的时候支持传入一个 threshold 参数
+
+
+ConcurrentHashMap.KeySetView<String, Boolean> set = ConcurrentHashMap.<String>newKeySet();
+
+# Arrays #
+并发设置数组的值
+
+# Future增强 #
+CompleteFuture
+允许添加监听器
+
+thenApply
+
+supplyAsync
+
+thenAccept
+
+thenCompose 返回另外一个Future,  用改Future的执行结果继续链接下去
+thenApply 返回另外一个对象, 用改对象继续链接
+
+
+handle 用于处理异常, 可以返回一个对象作为最终结果
+thenAccept then thenApply类似, 但是结果是void类型
+thenRun 运行一个Runnable
+whenComplete 同 handle 类似, 但是结果为void类型
+
+很多函数都有Async版本
+
+
+组合对象
+thenCombine
+thenAcceptBoth 和 thenCombine 类似, 但是返回值是void
+runAfterBoth 在两个Future执行后执行Runnable
+
+applyToEither
+acceptEither
+
+runAfterEither
+
+allOf
+anyOff
+
+统计曾经出现过的最长的字符串长度
+
+
+
+
+Stirng.join(", ",a,b,c,d)
+Files.lines
+Files.list
+Files.walk
+
+Byte.toUnsignedInt
+
+比较器
+Comparator.comparing(Person::getName).thenComparing(Person::getId)
+按照 name, id 进行排序
+nullsFirst
+nullsLast
+
+NavigableSet
+NavigableMap
+可以高效定位 >=v > v的最小值 之类
+
+# IO操作 #
+读取所有行
+
+
+Arrays.stream(array,from,to)
+
+Stream.generate(无参生成器)
+Stream.iterate
+
+
+正则表达式 asPridicate
+Pattern.compile("").splitAsStream()
+
+# 收集stream的结果 #
+
+分组 groupBy
+分片 
+
+
+Collectors.*
