--- a/Java/J2EE/Spring/Security/笔记.md
+++ b/Java/J2EE/Spring/Security/笔记.md
@@ -169,7 +169,7 @@ JaasApiIntergrationFilter 用于支持Jass验证方式
 - 一个访问判定器 用于判断 "根据当前的Authentication, 想要访问某 安全对象" 是否可行
 - 默认的实现是AffirmativeBased
 - 采用投票机制, 会有一堆的投票者
-	1. 只要1个人同意就通过
+	1. 只要1个人同意就通过, 相当于是OR的关系, 这是默认的选项
 	2. 全部同意才通过
 	3. 多数原则
 supports(ConfigAttribute), 这里的ConfigAttribute(简称CA) 似乎指的是 <interceptor-url ... access="a, b, c" /> 里的 a, b, c 这样写的话, 应该是会产生3个CA
@@ -654,3 +654,7 @@ AuthenticationTrustResolver
 
 为什么rememberMe要设计成放在数据库里? 15.
 
+
+MvcRequestMatcher
+PathMatcher
+@AuthenticationPrincipal
