--- a/Java/Lib/Querydsl/笔记.md
+++ b/Java/Lib/Querydsl/笔记.md
@@ -102,6 +102,9 @@ select update delete
 select ... from ... join ... where ... group by ... having ... order by ...
 
 JPAExpressions 里面有聚合函数
+可以用于子查询
+
+subQuery() 子查询
 
 
 # 与 Spring Data 整合 #
