--- a/Java/Lib/Selenium/学习笔记.md
+++ b/Java/Lib/Selenium/学习笔记.md
@@ -31,3 +31,41 @@ for (WebElement e : list) {
 
 wd.quit();
 ```
+
+WebDriver 及其实现类
+get 打开一个页面 当它返回的时候 页面不一定已经完全加载完毕
+getTitle
+quit
+各种寻找元素的方法
+执行js脚本
+获得当前url
+
+
+By类
+name
+id
+className
+
+WebElement
+sendKeys
+submit
+click
+
+
+WebDriverWait 辅助类
+until
+
+ExpectedCondition辅助类
+elementToBeClickable
+presenceOfElementLocated
+
+WebElement myDynamicElement = (new WebDriverWait(driver, 10))
+  .until(ExpectedConditions.presenceOfElementLocated(By.id("myDynamicElement")));
+
+driver.manage().timeouts().implicitlyWait(10, TimeUnit.SECONDS);
+
+
+
+http://docs.seleniumhq.org/docs/04_webdriver_advanced.jsp#explicit-and-implicit-waits-reference
+1. 代理的设置
+2. 
