--- a/Java/J2EE/Spring/SpringBoot笔记/笔记.md
+++ b/Java/J2EE/Spring/SpringBoot笔记/笔记.md
@@ -666,8 +666,14 @@ ConditionalOnClass 只有当某个类在classpath里的时候才有效
  META-INF/spring.factories
 
 # 44.启动产品级特性 #
-spring-boot-starter-actuator
+添加 spring-boot-starter-actuator模块
 可以用于控制和管理你的模块
+这样你就可以通过某些url查看你app的信息
+
+通过设置 management.context-path=/manage 可以将这些url移动到某个命名空间下
+
+
+
 
 # 45.Endpoints #
 Endpoint 相当于对应了一个 url地址, 通过访问这个url地址, 就会知道当前系统的运行情况, 配置等
