--- a/Java/J2EE/Spring/官方文档笔记/10.AOP新.md
+++ b/Java/J2EE/Spring/官方文档笔记/10.AOP新.md
@@ -20,12 +20,14 @@
 ## around(拦截器) @Around ##
 
 
-## Poincut ##
+## 支持的切点 ##
 在新版里就是使用 AspectJ 的表达式
 用于匹配切入点的过滤器
 @Pointcut("execution(public void org.xzc.learn.spring.aop.Singer.sing())")
 private void sing() {
 }
+这里的 Singer 是一个接口, 这样它所有实现类的sing方法都会被拦截
+
 其他常见的 pointcut 类型
 
 要注意它们匹配的是类还是方法!!!
@@ -34,9 +36,12 @@ execution(方法签名) 匹配方法签名
 execution(modifiers-pattern? ret-type-pattern declaring-type-pattern?name-pattern(param-pattern)
             throws-pattern?)
 
-within(类名)
-this
-target(类名) 当target是目标类或实现该接口的时候才会触发
+within(type-name-pattern) 使得这个切点只匹配某些类, 这里你可能会感觉很困惑 这跟直接在 execution 上指定有什么区别? 答案within指定的是实现类!
+支持通配符 xxx.service..* 匹配这个包下的所有类/接口
+within匹配的是这个target的类在某个范围内
+
+this 限制 proxy 必须有的类型 一般是接口, 由于代理一般都跟target具有相同的接口, 因此可能感觉所用不大, 但是proxy实际上是可以有额外的接口的(引入, 对吧!) 这时候就有用了
+target(类名) 当target是目标类或实现该接口的时候才会触发, 似乎只支持完整类名, 不支持通配符, target限制的是target的类就是某个类(无法使用通配符)
 args(参数名列表) 匹配参数名列表
 
 @target 如果target的类上有该annotation
@@ -122,3 +127,81 @@ factory.setExposeProxy(true);
 # Advisor #
 
 # JDK和CGLIB代理的区别 #
+
+# 杂 #
+@EnableAspectJAutoProxy
+启动自动代理, 这样会将所有的切面根据切点应用到所有的bean上
+当然如果一个bean不满足切点的条件 那么它就不会被增强
+
+# 步骤 #
+1. @EnableAspectJAutoProxy
+2. 定义切面, @AspectJ + @Component
+3. 定义切点 @Pointcut(...)
+4. 定义通知 @Around 等...
+
+
+
+```
+@Pointcut("execution(* com.xyz.someapp.modules..service.*.*(..))")
+如果你的项目是按照模块划分的 那么可以用上面的方式去捕获
+```
+
+Before 无法修改参数 只能获取
+AfterReturn
+AfterThrowing 可以拿到返回的错误
+After(finally) finally的效果
+Around 一切皆有可能, 第一个参数必须是 ProceedingJoinPoint 进行后续的处理
+
+均可注入 JoinPoint
+
+注入参数, 参数必须用 args 捕获
+```
+@Before("com.xyz.myapp.SystemArchitecture.dataAccessOperation() && args(account,..)")
+public void validateAccount(Account account) {
+    // ...
+}
+@Before("accountDataAccessOperation(account)")
+public void validateAccount(Account account) {
+    // ...
+}
+```
+
+# 注入annotation #
+```
+@Retention(RetentionPolicy.RUNTIME)
+@Target(ElementType.METHOD)
+public @interface Auditable {
+    AuditCode value();
+}
+
+@Before("com.xyz.lib.Pointcuts.anyPublicMethod() && @annotation(auditable)")
+public void audit(Auditable auditable) {
+    AuditCode code = auditable.value();
+    // ...
+}
+```
+
+# 注入target #
+```
+@Before(value="com.xyz.lib.Pointcuts.anyPublicMethod() && target(bean) && @annotation(auditable)",
+        argNames="bean,auditable")
+public void audit(Object bean, Auditable auditable) {
+    AuditCode code = auditable.value();
+    // ... use code and bean
+}
+本来target处应该填写的是一个类名, 但通过上面的方式也可以将target注入进来
+```
+
+```
+@Before(value="com.xyz.lib.Pointcuts.anyPublicMethod() && target(bean) && @annotation(auditable)",
+        argNames="bean,auditable")
+public void audit(JoinPoint jp, Object bean, Auditable auditable) {
+    AuditCode code = auditable.value();
+    // ... use code, bean, and jp
+}
+```
+
+# 拦截顺序 #
+Ordered 接口 或 Order annotation
+值越小越早拦截
+
