--- a/Database/MySQL/函数积累.md
+++ b/Database/MySQL/函数积累.md
@@ -1,5 +1,5 @@
-
 # 函数积累 #
+
 ## 数学运算 ##
 ```
 + - * / % > >= = = <= < != <>
@@ -9,12 +9,32 @@ bit_or
 bit_count
 
 ## 时间 ##
-TIMESTAMPDIFF
+TIMESTAMPDIFF(单位,日期1,日期2) 计算两个日期之间的差距(以提供的单位作为单位)
+timestampdiff(year,birthday,current_date()) 计算某人的当前岁数
+
 CURDATE CURRENT_DATE() 当前的日期
 YEAR MONTH DAYOFMONTH 用于从date类型里抽取出相关字段
 DATE_ADD(起始时间, INTERVAL 数量 单位)
+date_sub()
 date_add(curdate(), interval 1 day); 明天的日期
+
+month(date) 获取月份
+dayofmonth(date) 获取天
+
+date_format()
+str_to_date()
+
+
 ## 字符串 ##
 left(str,10) right(str,10) 取这个字符串左边/右边的10个字符
+concat(多个字符串) 字符串的拼接
 
-## 其他 ##
+## 加密函数 ##
+password(str) 这个是数据库的用户密码加密时用的加密函数, 不要用于个人应用的加密
+md5(str)
+encode(要加密的数据,password),decode(要解密的数据,password) 用password加密str, 只有用相同的password才能解密
+加密后的结果是跟str字节长度一样的二进制串
+
+# 杂 #
+cast(原始值 as 新类型)
+ 
