--- a/Database/MySQL/服务器配置.md
+++ b/Database/MySQL/服务器配置.md
@@ -8,3 +8,12 @@ GRANT ALL ON *.* TO 'root'@'%';
 mysql -h host -u user -p < batch-file > output-file
 --force
 
+# 字符集 #
+
+mysqld节下的
+服务端的默认字符集
+character-set-server=utf8
+collate 该字符集的排序规则
+
+show variables like 'character\_set\_%'
+
