--- a/Database/MySQL/表操作.md
+++ b/Database/MySQL/表操作.md
@@ -1,14 +1,29 @@
-
 # table #
 ## 查看所有表 ##
 show tables;
 
 ## 查看表结构 ##
 desc NAME;
+show columns from student where ...;
+show table in information_schema;
+
 
 ## 创建表 ##
-create table NAME (字段定义);
+一般不需要手动编写语句 而是用可视化工具代替
+create table NAME (字段定义) engine=innodb;
 auto_increment
+
+可以为单个字段指定字符集
+name varchar(32) character set utf8 collate utf8的排序规则
+
+根据已有的表创建一个新表
+create table TABLE_NAME like OLD_TABLE;
+
+create table 表名 select * from student where sex = 'f'
+
+ts_modified TIMESTAMP default current_timestamp on update current_timestamp
+
+
 
 ## 查看建表语句 ##
 show create table NAME;
@@ -66,4 +81,12 @@ select 1 = null, 1!=null ,1 is null, 1 is not null;
 2. group by xxx, xxx is null的记录会被分为一组
 3. null 不会参与聚合运算
 
+
+这样会删除所有连接成功的t1
+delete t1 from t1 inner join t2 on t1.id=t2.id
+
+删除所有连接失败的t1
+delete t1 from t1 left join t2 on t1.id=t2.id where t2.id is null;
+
+也可以从多个表进行删除和更新, 等用到再去看吧
 
