--- a/Database/MySQL/账号管理.md
+++ b/Database/MySQL/账号管理.md
@@ -12,14 +12,22 @@ select current_user();
 # 添加账号 #
 主机 + 账号 = 一个完整的账号描述
 
-## create user ##
+## 创建账号 ##
+一个账号是由用户名+主机名唯一确定的! %可以用来匹配所有的主机名
 create user 'xzc'@'192.168.157.1' identified by 'my_password';
 create user 'xzc'@'%' identified by 'my_password';
 
-## grant ##
-grant all privileges on *.* to 'xzc'@'192.168.157.1' with grant option;FLUSH PRIVILEGES;
+create user 'root'@'%' identified by '70862045';
 
-grant all privileges on *.* to 'root'@'%' with grant option;FLUSH PRIVILEGES;
+## grant ##
+用于授予权限
+授予所有数据库(第一个星号)的所有表(第二个星号)给来自192.168.157.1的用户xzc
+grant all privileges on *.* to 'xzc'@'192.168.157.1' with grant option;
+FLUSH PRIVILEGES;
+
+grant all privileges on *.* to 'root'@'%' with grant option;
+FLUSH PRIVILEGES;
+
 
 GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' IDENTIFIED BY '70862045' WITH GRANT OPTION;FLUSH PRIVILEGES;
 
@@ -30,6 +38,9 @@ use bs2;
 
 docker run -it --link mysql:mysql --rm -v $(pwd)/bs2.sql:/bs2.sql mysql sh -c 'exec mysql -h"mysql" -P"3306" -uroot -p"70862045" --default-character-set=utf8 -e "source /bs2.sql;"'
 
+## revoke ##
+用于删除权限
+remove xxx-privileges on *.* from user
 
 # show grants #
 show grants for 'xzc'@'192.168.157.1';
