--- a/Database/MySQL/配置文件.md
+++ b/Database/MySQL/配置文件.md
@@ -11,3 +11,15 @@ http://dev.mysql.com/doc/refman/5.7/en/sql-mode.html
 log-error
 日志文件默认在/var/log/mysqld.log
 
+
+
+#启动客户端默认连接的端口
+[client]
+port=3306
+host=localhost
+user=root
+password=70862045
+
+#默认的字符集
+[mysql]
+default-character-set=utf8
