--- a/Java/dubbo/笔记.md
+++ b/Java/dubbo/笔记.md
@@ -14,7 +14,6 @@ zxid = ZooKeeper transaction ID = epoch + counter
 每当有新的选举 epoch 就会增加
 
 
-
 # 配置 #
 ```
 仅仅是一个名字而已
@@ -77,8 +76,25 @@ dubbo.registry.check=false
 <dubbo:reference interface="com.foo.BarService" init="true" />
 ```
 
+## 暴露服务 ##
+必须指定 接口和实例
+
+其他常用的参数: 超时 权重 直连url
+
 ## 集群容错模式 ##
+
+将多个 invoker 包装成一个 invoker, 对外暴露.
+当该 invoker 被执行的时候, 现在用负载均衡策略, 选择一个包装的invoker进行调用, 如果调用失败, 就会根据 集群策略(failover 还是 failfast 之类) 再次使用负载均衡策略进行选择并调用
+
+failover, 错误转移, 也就是换一个服务调用, 可以设置重试次数, 一般用于读操作
+failfast, 快速失败, 只调用一次, 失败则马上抛异常, 适用于写操作
+failsafe, 失败安全, 出现失败是正常的, 比如记录日志
+另外还有一堆... 有空看看
+ 
+
 ## 负载均衡 ##
+如何从一堆的invoker中选出一个进行调用
+
 
 ## 协议 ##
 <dubbo:protocol name="dubbo" dispatcher="all" threadpool="fixed" threads="100" />
@@ -158,3 +174,24 @@ com.alibaba.dubbo.container.Main
 
 
 # 杂 #
+
+
+
+
+
+# 开发者 #
+## Protocol ##
+
+## ExporterListener ##
+对于provider, 当有服务暴露或注销的时候就会调用这个方法.
+
+
+# 考虑和SpringBoot的整合 #
+和SpringBoot整合的一点就是要尽量做到:
+1. 使用 JavaConfig
+2. 尽量将配置放入 application.properties 甚至是动态的外部配置(spring-cloud-config)
+
+
+# TODO #
+1. 了解静态服务
+
