--- a/Database/MySQL/数据库操作.md
+++ b/Database/MySQL/数据库操作.md
@@ -1,4 +1,6 @@
-# database #
+切换数据库
+use 数据库名;
+
 查看所有数据库
 show databases;
 
@@ -7,3 +9,8 @@ select database();
 
 创建数据库
 create database NAME;
+
+CREATE DATABASE IF NOT EXISTS bilibili DEFAULT CHARSET utf8mb4 COLLATE utf8mb4_general_ci;
+
+可以为单个字段指定字符集
+name varchar(32) character set utf8 collate utf8的排序规则
