--- a/Other/docker/笔记.md
+++ b/Other/docker/笔记.md
@@ -1,4 +1,4 @@
-A container is a stripped-to-basics version of a Linux operating system. 
+,.docker pA container is a stripped-to-basics version of a Linux operating system. 
 An image is software you load into a container. When you ran the command, the Engine software:
 
 docker images
@@ -373,15 +373,6 @@ docker commit 容器id 仓库名:TAG
 docker -d -p 2022:22 ssh:commit /root/run.sh
 
 
-Docker进阶与实战
-Docker即学即用
-Docker技术入门与实战
-第一本Docker书 = The docker book
-Docker开发实践
-Docker容器与容器云
-Docker全攻略
-
-Linux常用命令手册
-
-PaaS实现与运维管理 基于Mesos+Docker+ELK的实战指南
-Kubernetes权威指南 从Docker到Kubernetes实践全接触
+# events #
+docker events --since 时间戳 --filter 'container=xxx' --filter 'image=sdfsdf'
+可以收获一些事件监听
