--- a/Database/MySQL/账号管理.md
+++ b/Database/MySQL/账号管理.md
@@ -14,10 +14,11 @@ select current_user();
 
 ## 创建账号 ##
 一个账号是由用户名+主机名唯一确定的! %可以用来匹配所有的主机名
+
 create user 'xzc'@'192.168.157.1' identified by 'my_password';
 create user 'xzc'@'%' identified by 'my_password';
 
-create user 'root'@'%' identified by '70862045';
+create user 'xzc'@'%' identified by '70862045';
 
 ## grant ##
 用于授予权限
@@ -25,7 +26,7 @@ create user 'root'@'%' identified by '70862045';
 grant all privileges on *.* to 'xzc'@'192.168.157.1' with grant option;
 FLUSH PRIVILEGES;
 
-grant all privileges on *.* to 'root'@'%' with grant option;
+grant all privileges on xzc.* to 'xzc'@'%' with grant option;
 FLUSH PRIVILEGES;
 
 
