--- a/Linux/CentOS/网络操作/常见网络操作.md
+++ b/Linux/CentOS/网络操作/常见网络操作.md
@@ -5,6 +5,9 @@ ifconfig
 
 ifconfig 网卡名 新ip
 
+ipup/ipdown 网卡名 启动或关闭网卡
+
+
 从本地复制文件到远程
 scp 本地文件 远程用户名@ip地址:远程文件
 
@@ -35,4 +38,16 @@ ss 命令 取代 netstat
 -u 显示udp端口的情况
 -p 显示相关进程号
 
-s
+# 配置网卡 #
+if从覅个eth0192.168.1.10 呢马赛克255.255.255.0
+
+或直接修改配置文件
+ubuntu 在 /etc/network/interfaces 里
+
+ONBOOT=YES
+DNS1
+GATEWAY
+PREFIX
+IPADDR
+TYPE=Ethernet
+BOOTPROTO
