--- a/Linux/笔记/用户管理.md
+++ b/Linux/笔记/用户管理.md
@@ -10,7 +10,7 @@ useradd 用户名
 -s/--shell 指定登录用的shell
 
 useradd xzc -p xzc
-
+useradd nginx --system -M
 
 
 
@@ -30,3 +30,50 @@ last xzc
 
 
 # 组操作 #
+
+
+
+
+# 查看系统中所有的用户和组 #
+cat /etc/passwd | awk -F ':' '{print $1}'
+
+查看所有组
+cat /etc/group | awk -F ':' '{print $1}'
+
+# 查看用户信息 #
+id 查看自己的信息
+id xzc 查看xzc的信息
+id 1 查看uid=1的信息
+
+root的id是0
+
+
+
+# 添加用户 #
+useradd
+指定用户名 是否创建家目录 是否是系统用户 登陆用的bash 所属的组
+
+默认会创建一个和用户同名的组
+
+/etc/default/useradd 文件里保存了默认的配置信息
+
+当用户创建了家目录的时候会将 /etc/skel 里的文件复制到家目录作为初始化
+
+-g 主用户组
+-G g1,g2 附加用户组
+
+useradd nginx --system -M
+--system 系统该账号
+-M 不创建家目录
+
+# 修改密码 #
+passwd 交互模式修改自己的密码
+passwd 用户名 交互模式修改别人的密码
+
+chpasswd
+echo "root:123" | chpasswd 可以修改密码为123
+可以不用进入交互模式就可以修改密码, 安全性比较弱
+
+# 查看用户所在的组 #
+groups 查看用户所在的组
+groups xzc 查看xzc用户所在的组
