--- a/Programming Language/Python/django/用户系统.md
+++ b/Programming Language/Python/django/用户系统.md
@@ -11,9 +11,6 @@
 is_authenticated 是否已经认证过, 对于已经登陆的用户它是True, 对于匿名用户则False
 is_anonymous
 
-## TODO ##
-username_validator
-
 
 ## 方法 ##
 各种get方法
@@ -162,3 +159,62 @@ class MyView(PermissionRequiredMixin, View):
 
 # 杂 #
 redirect_to_login
+
+# 自定义用户模型 #
+## 通过外键 ##
+## 直接替换掉UserModel ##
+```
+class Article(models.Model):
+    author = models.ForeignKey(
+        settings.AUTH_USER_MODEL, 这里就不再是引用原来的User类了
+        on_delete=models.CASCADE,
+    )
+```
+
+django.contrib.auth.get_user_model() 这个方法也可以用来获取当前配置的 UserModel 类
+但这个方法只有在所有的类都导入完毕之后才会生效
+而settings.AUTH_USER_MODEL是一个字符串
+
+通常来说建议你存储你特定的数据到另外一个表里 然后通过外键连接起来 这样就可以完全复用django的用户系统
+
+如果确实要自定义UserModel, 那么要满足如下的条件:
+1. 有一个可以唯一标识的字段, 比如 username, email
+2. Your model must provide a way to address the user in a “short” and “long” form. The most common interpretation of this would be to use the user’s given name as the “short” identifier, and the user’s full name as the “long” identifier. However, there are no constraints on what these two methods return - if you want, they can return exactly the same value.
+
+1. 继承 AbstractBaseUser
+2. 在你自己的实现类里, 使用 USERNAME_FIELD 标识 你的唯一字段
+3. REQUIRED_FIELDS = [一堆字段] 这堆字段在 createsuperuser 的时候不允许为空
+4. 
+
+# 权限 #
+每个用户有一堆得权限
+user.has_[add|change|delete]_permission()
+一个用户可以属于多个组
+一个用户可以有多个权限
+
+user.groups
+user.user_permissions
+
+他们都是相应的模型
+
+login要放在第一个
+```
+@login_required
+@permission_required('polls.can_vote')
+def my_view(request):
+    ..
+```
+
+PermissionRequiredMixin 
+```
+class MyView(PermissionRequiredMixin, View):
+    permission_required = 'polls.can_vote'
+    # Or multiple of permissions:
+    permission_required = ('polls.can_open', 'polls.can_edit')
+```
+
+
+
+AccessMixin
+permission_denied_message
+handle_no_permission
