--- a/Programming Language/Python/虚拟环境.md
+++ b/Programming Language/Python/虚拟环境.md
@@ -1,4 +1,4 @@
-virtualenv virtualenvwrapper
+pip3 install virtualenv virtualenvwrapper
 
 参考
 http://blog.csdn.net/deerlux/article/details/39324609
