--- a/Web/Apache/HttpComponents/学习笔记.md
+++ b/Web/Apache/HttpComponents/学习笔记.md
@@ -3,6 +3,18 @@ http://hc.apache.org/
 
 常用阻塞性IO, 也有非阻塞版本的
 
+# 必须要掌握的一些类 #
+URIBuilder 构建和解析uri
+HttpEntity 及其子类 目前似乎没有提供 JsonEntity 不过你可以自己基于 StringEntity 创建一个子类来实现
+EntityUtils
+
+# 几个建议 #
+1. 尽量早点是释放低级的对象 比如 InputStream response
+	1. 关于 InputStream  
+2. ResponseHandler 可以用于直接将 resp 转成你想要的最终对象, 此时hc会负责resp等低级对象的关闭
+3.  
+
+
 # 一般用法 #
 hc= ...
 req= ...
