添加 feign gpg swagger 的笔记

--- a/Java/eureka/笔记.md
+++ b/Java/eureka/笔记.md
@@ -10,3 +10,85 @@ server本身也要用到client去发现其他同名的server
 在本地运行的时候可能需要3分钟的初始化时间, 因为它需要花时间去寻找同伴, 但是没找到, 可以用下面的配置提高初始化速度
 eureka.numberRegistrySyncRetries=0
 
+
+# MAIN - eureka.md #
+主要是学习 spring-cloud-netflix 时的笔记, 目前还是比较乱, 待整理
+http://cloud.spring.io/spring-cloud-netflix/
+特性:
+1. 服务注册/发现 eureka
+2. 断路器 hystrix
+3. rest客户端 feign
+4. 客户端的复杂均衡 ribbon
+5. 外部化配置
+6. 路由和过滤 zuul
+
+# 注意 #
+由于有的demo要开多个jvm, 内存消耗还是蛮大的.
+可以使用 -Xmx256m 或 -Xmx128m 限制一下最大内存的使用 不然内存都快被吃干了
+
+# 优雅上下线方案 #
+想要做到: 等应用完全初始化完毕之后, 才注册服务, 否则在引用还没准备好的时候可能已经有请求进来了. 并且能够以一种完全不影响客户端的方式将应用下线.
+
+0. SpringBoot提供了健康检查器(HealthIndicator, 简称HI), 用于体现当前应用的健康情况
+1. 启动spring对eureka的健康检查支持, 它会添加一个eureka相关的HI (简称EHI), 和一个callback. 
+	1. EHI是定期更新的, 因此跟server上的状态会有很大的差距
+2. 这个callback会被定期调用, 目前还不知道如何设定它的频率.
+	1. 它会以除了EHI外的所有的HI的状态来决定该实例的状态.
+3. 自己随便新增一个HI(简称MHI), 然后暴露一些接口, 用于控制该HI的UP/DOWN. 初始化为DOWN
+4. 由于MHI状态是DOWN, 根据 2.1 此时实例的状态不是UP
+5. 当你认为程序已经准备好接收请求了, 就将MHI的状态设置为UP(通过你暴露的接口)
+6. 等待定时器执行 2后, 就会将实例的状态设置为UP
+7. 当需要下线的时候, 将MHI的状态设置为DOWN, 等待定时器执行2后, 就会将实例的状态设置为DOWN
+
+但是! 有几个问题:
+1. 定时器的频率如何调整
+2. 6和7 执行完之后, server处的状态并不是马上同步, 因为server有缓存.
+3. 另外就算服务器上的状态已经显示是down了(注意访问主页的话, 它是没有过缓存层的(因此它会马上体现出service的状态), 而访问 /eureka/apps/serviceId的话是有缓存的!), 客户端也有可能持有该服务地址. 因为客户端也有缓存(eureka不支持服务端推 因此... 只能修改客户端的更新频率了, 但是频率太快的话 又浪费大量的网络;)
+4. 由于很多个地方都有缓存, 时间大概都是30秒或60秒刷新一次, 因此保守估计将一个服务从 UP->DOWN, 起码要等待2分钟才能保证绝大多数的客户端不会再将请求发给该服务了.
+5. DOWN -> UP 也是同理
+6. 得找找办法降低反应所需要的时间
+7. 将服务的状态设置为 out_of_service 之后, 它就一直为 out_of_service 了, 无论我怎么up它都还是out_of_service. 但是down状态的话就不会出现这种情况
+	1. 找到解决方法了, out_of_service 必须先变成 down, 然后再变成up才行.
+	2. 竟然还有这种规定!!!
+
+# 未解的问题 #
+1. eureka-server 有一个 Renews threshold	和 Renews (last min)的概念, 现在对它还不是太懂, 导致当右服务生产者挂掉的时候, eureka-server 进入自我保护模式, 此时它不会移除实际上已经挂掉的服务器, 在非自我保护模式的时候, 一旦90秒没有心跳就自动移除, 不过现在就是一直僵死在那了.
+	1. 这样会导致客户端拿到实际上已经挂掉的服务的url, 调用的时候就会出现超时的情况, 客户端只能fallback或重试.
+	2. 似乎可以通过禁用 自我保护模式来解决这个问题  enableSelfPreservation: false
+	3. 测试中发现 Renews threshold = 曾经拥有过的服务数量 *2, 即使一个服务起来之后, 又挂了, 但它贡献的2依旧存在, 如果本来有5个服务, 那么他是10, 然后5个服务全挂了, 它还是10, 又有5个新的服务起来了, 它变成20
+	4. Renews (last min) 总是等于当前存活的服务数量 * 2
+	5. 后来测试过程中又发现 Renews threshold	= 0 坑了 ... 不知道为什么 
+	6. **目前的解决方法**, eureka.server.enableSelfPreservation=false, 
+2. 另外server高可用的问题似乎还没有解决, 建议在这个问题解决之前, 不要大规模使用. 坑太深.
+3. 另外有些值"可以改, 但又不能改", 比如客户端发心跳的频率, 因为目前服务端似乎认为客户端一定是每30秒发心跳的, 一旦客户端的频率变了, 服务端也要跟着变化, 而且所有的客户端的频率都要一致...
+
+# 服务发现 #
+考虑这个问题: 当一个服务有多个生产者的时候, 消费者(调用者)会将请求发给其中一个生产者, 消费者如何知道有哪些生产者?
+
+我目前了解一下两种方式:
+1. 为所有生产者提供一个网关, 对外只暴露为一个实例, 在网关这里做负载均衡, 这样对于消费者来说, 生产者似乎只有一个.
+但是这时候网关就成为瓶颈了, 而且网关的网络利用率要除以2, 因为它需要做转发.
+这时候不得不起多个网关服务器, 然后在消费者(调用者)这边也要有简单的负载均衡策略将请求发给不同的网关, DNS解析或其他方法.
+但这样做的话似乎情况又回到之前了... 而且似乎更麻烦
+2. 在消费者这边保存所有生产者的信息, 比如IP和端口之类. 在客户端这边做负载均衡. 这样比起网关, 少了一次请求转发, 速度通常更快(两边之和大于第三边不一定成立).
+
+但是生产者可能会添加或减少, 需要动态维护可用的生产者的列表, 而不能写死.
+
+这时候就要考虑如何发现服务了
+
+> 开源的DUBBO则是利用Zookeeper(虽然还有其他策略, 但这是DUBBO推荐的)来进行服务发现, 各种配置也都是放到zookeeper上的.
+
+# 服务发现 - Eureka #
+这里介绍一下 Eureka, 这是 Netflix 公司的开源项目, 可以:
+1. 用它可以搭建一个 Eureka Server, 用于在内存里保存服务的信息(名字, ip, 端口, 元数据等), Server 可以做成副本集, 保证高可用.
+2. 每个客户端或服务提供者是一个 Eureka Client, 它们会将自身的信息注册到 Eureka Server 上, 也可以从 Eureka Server 上获取信息, 比如获取服务名为users的所有服务生产者的信息(ip, 端口等). Client在一定时间内会缓存获取到的信息, 以防止频繁访问 Eureka Server.
+3. Eureka Client 定期向 Eureka Server 发送心跳包, 如果一定时间内没收到, 那么就会从 Server 就会移除这个 Client . 
+
+根据上面的描述, 想要做到 Client 端的负载均衡就容易了, 把所有生产者注册到 Eureka Server 上, 消费者从 Eureka Server 获取服务的信息(这点由 Eureka Client 帮你做到, 一般获取到的是一个服务信息的数组).
+然后你再根据你的负载均衡策略, 从中选出一个进行调用.
+
+直接使用 Eureka 项目介绍的方法的话, 这个项目用起来还是有点"麻烦"的. 不过 Spring Cloud 已经提供了一些 starter 方便进行整合, 要做的就是按照教程, 添加 相应的依赖和annotation, 估计只有原来的10%工作量. 不过当需要精调的时候, 还是不得不回去查阅 eureka 的文档.
+
+# 其他的服务发现策略 #
+其他的服务发现方法还是有的, 比如基于Zookeeper 的服务发现, 但上次发现这篇文章 [为什么不要把ZooKeeper用于服务发现](http://www.infoq.com/cn/news/2014/12/zookeeper-service-finding)
+这篇文章还没看, 等我对服务发现更了解一些时候, 再去看看它的理由吧
