--- a/Java/zookeeper/笔记.md
+++ b/Java/zookeeper/笔记.md
@@ -1,1 +1,16 @@
+# 一些例子 #
+## 锁 ##
+每个锁都有一个名字, 比如 /lock/user/70862045
+想要获取锁的时候使用 create /lock/user/70862045 "随便写一些数据 或 一些有用的数据来表明锁的拥有者"
+如果创建成功那么你就获得了锁 否则就是没有获得索
+由于没有超时的机制, 你必须将该节点设置成临时节点, 这样如果锁的拥有者崩溃了 那么节点自动撤销, 但是你也要保证锁的拥有者记得释放锁
+
+## 主从 ##
+假设 n个节点
+1. 尝试创建 /master, 并且监听, 成功者就是master 否则都是slave
+2. 上面监听了 /master 的情况, 如果发现 /master 被删除了 则再次进行1的动作
+
+通常 /master 里的数据可以是当前拥有者的一些信息
+
+
 # 安全 #
