--- a/Linux/笔记/管理服务的启动.md
+++ b/Linux/笔记/管理服务的启动.md
@@ -1,4 +1,11 @@
 sudo apt-get install sysv-rc-conf
-sysv-rc-conf
+sysv-rc-conf 但它似乎会失效啊????
 
 就会出现简单的图形界面用于管理启动项
+
+
+
+update-rc.d
+lsb
+
+systemctl
