--- a/Java/J2EE/Hibernate/11.批处理.md
+++ b/Java/J2EE/Hibernate/11.批处理.md
@@ -4,13 +4,21 @@ JDBC提供了批处理功能, 利用 PreparedStatement, 然后不断改变它的
 
 hibernate.jdbc.batch_size 每次批量操作的大小
 
+hibernate.jdbc.batch_versioned_data
+hibernate根据返回的"受影响的行数"来判断 乐观锁/版本号 是否正确
+有的驱动会返回错误的受影响行数 从而导致判断失败
+5.0之后默认是true
+
 hibernate.order_update
 强制 当执行更新命令的时候, 按照类型 和 主键 的顺序来更新, 这样可以提高性能
 比如说可以减少死锁, 更少的事务
 
+比如现在批处理里包含了Person和Student两类对象 Person 对象先更新完 再去更新 Student 对象
+
 hibernate.order_inserts
-解释似乎不太好翻译
-Forces Hibernate to order inserts to allow for more batching to be used. Comes with a performance hit, so benchmark before and after to see if this actually helps or hurts your application.
+让 hibernate 按照实体类型 主键的值 来进行更新
+
+
 
 # session 批处理 #
 打开一个事务
