--- a/Programming Language/Lua/笔记.md
+++ b/Programming Language/Lua/笔记.md
@@ -1,3 +1,19 @@
+# 基本数据类型 #
+动态类型
+nil boolean number string fucntion userdata thread table
+nil 跟 null类似
+boolean true/false
+nil和false都可以被当做false类值 其他值都可以被当成true类值
+number 可以是整数或浮点数
+number其实有2种子类型 integer float一般来说lua会做自动转换
+64位lua的话integer和float都是64位的 32位都是32位的
+userdata 表示一块内存
+table 数组或map
+显示调用error函数产生一个错误
+pcall xcall进入保护模式
+
+
+
 https://github.com/openresty/lua-nginx-module
 
 lua
