--- a/Database/MySQL/账号管理.md
+++ b/Database/MySQL/账号管理.md
@@ -16,9 +16,14 @@ select current_user();
 一个账号是由用户名+主机名唯一确定的! %可以用来匹配所有的主机名
 
 create user 'xzc'@'192.168.157.1' identified by 'my_password';
+
+create user 'root'@'59.78.22.103' identified by 'xzc@7086204511';
+
 create user 'xzc'@'%' identified by 'my_password';
 
 create user 'xzc'@'%' identified by '70862045';
+
+create user 'bilibili_agg2'@'%' identified by 'BILIbili_agg2_70862045';
 
 ## grant ##
 用于授予权限
